--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 header {
-    text-align: center;
+    border-bottom: 1px solid #d0d4d9;
+    box-shadow: 0px 1px 1px #d0d4d9;
   }
   img {
     height : 100px;
