--- a/index.css
+++ b/index.css
@@ -1,9 +1,199 @@
+
+:root {
+  --gray: #A5A5A5;
+  --blue: #0061FF;
+  --darkblue: #0057E5;
+  --worksans: 'Work Sans', sans-serif;
+}
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+  font-family: 'Work Sans', sans-serif;
+  font-size: 1.2rem;
+  background: var(--ivory);
+}
+
+.main-wrapper { 
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.div-left {
+  padding: 3.6rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0 0 7px 7px;
+}
+
+.div-left img {
+  width: 240px;
+  display: block;
+  margin: 0 auto;
+}
+
+.subscribe-wrapper{
+  margin: 1.2rem;
+  border-radius: 8px;
+}
+
+.div-right{
+  background:#fff;
+  border-radius: 7px 7px 0 0;
+  position: relative;
+}
+
+.div-right h2 {
+  font-weight: 700;
+  opacity: 0.9;
+  line-height: 1.3;
+}
+
+.div-right p{
+  padding: 0.75rem 0;
+  font-weight: 500;
+  opacity: 0.4;
+  line-height: 1.3;
+}
+
+.subs-form{
+  padding: 1rem 0;
+}
+.form-control{
+  width: 100%;
+  border-radius: 4px;
+  border: 2px solid rgba (0, 0, 0, 0.15);
+  padding: 0.7rem;
+  margin: 0.5rem 0;
+  font-family: inherit;
+  outline: 0;
+  font-size: 1.2rem;
+  font-weight: 400;
+  transition: all 0.5s ease;
+}
+
+.form-control::placeholder{
+  color: rgba(0, 0, 0, 0.2);
+  transition: all 0.5s ease;
+}
+
+.form-control:focus{
+  border-color: rgba(0, 0, 0, 0.4);
+}
+
+.form-control:focus::placeholder{
+  color: rgba(0, 0, 0, 0.4);
+}
+#submit-btn:disabled{
+  font-family: inherit;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: ivory;
+  border-radius: 4px;
+  padding: 0.7rem;
+  border: none;
+  background: var(--gray);
+  margin: 0.5rem 0;
+  width: 100%;
+  outline: 0;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+#submit-btn{
+  font-family: inherit;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: ivory;
+  border-radius: 4px;
+  padding: 0.7rem;
+  border: none;
+  margin: 0.5rem 0;
+  width: 100%;
+  outline: 0;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  background: var(--darkblue);
+}
+
+.div-right span{
+  font-size: 1rem;
+  text-align: center;
+  display: block;
+  font-weight: 300;
+  letter-spacing: 0.5;
+  opacity: 0.8;
+  position: relative;
+}
+
+.div-right span::after{
+  position: absolute;
+  bottom: -1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  content: "";
+  width: 100px;
+  height: 2px;
+  background: var(--blue);
+}
+
+.subscribe-wrapper{
+  display:grid;
+}
+.div-right{
+  order:1;
+}
+.div-left{
+  order: 2;
+}
+
+h4 {
+  font-size: 13pt;
+}
+
+@media screen and (min-width: 480px) {
+  .subscribe-wrapper{
+    margin: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .subscribe-wrapper{
+    grid-template-columns: repeat(2, 50%);
+  }
+  .div-left{
+    order: 1;
+    border-top-left-radius: 7px;
+    border-bottom-right-radius: 0;
+  }
+  .div-right{
+    order: 2;
+    padding-left:3.2rem;
+    border-bottom-right-radius: 7px;
+  }
+
+}
+
+/* js related */
+.invalid-alert{
+  border-color: rgb(240, 13, 13);
+}
+.valid-alert{
+  border-color: black
+}
+
 header {
     text-align: center;
     border-bottom: 1px solid #d0d4d9;
     box-shadow: 0px 1px 1px #d0d4d9;
   }
   img {
-    height : 100px;
     width : 250px;
   }
